<resources>
    <string name="app_name">Currency_monitor</string>
    <string name="currency_actually_today">Актуальные курсы валют на сегодня:</string>
    <string name="item_value">26.4864</string>
    <string name="item_name">Польский злотый</string>
    <string name="item_nominal">1</string>
    <string name="currency_pb_loading">Загружаю данные</string>
    <string name="title_currency_now">Курсы валют</string>
    <string name="title_calculator">Калькулятор</string>
    <string name="title_name_app">Приложение курса валют</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calc_title">Калькулятор</string>
    <string name="calc_hint_currency_name">Канадский доллар</string>
    <string name="calc_hint_rub">100</string>
    <string name="calc_title_button">Считать</string>
</resources>