<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="textEnd">

    <TextView
        android:id="@+id/item_currency_nominal"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/item_nominal"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_currency_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/item_name"
        android:maxWidth="200dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_currency_value"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/item_value"
        android:textAlignment="center"
        android:textSize="20sp" />

</LinearLayout>